# federated-elm

./: .gitignore  README.md  X_recovery_test.py  client.py  data_basic.csv  data_basic_2.csv  data_basic_fed.csv  data_basic_fed_geo.csv  data_basic_geo.csv  data_diff_privacy.csv  differential_privacy-Copy1.py  differential_privacy.py  federated-final.py  federated_HH_noise.py  federated_basic.py  pyproject.toml  utils.py
data/: data_diff_privacy_federated_4.csv  noise_HH.csv
flower/: basic_elm.py  client.py  results.txt  run.sh  server.py  utils.py
