[tool.poetry]
name = "federated-elm"
version = "0.1.0"
description = ""
authors = ["Anton Akusok <akusok.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scikit-learn = "^1.3.2"
pandas = "^2.1.2"
jupyterlab = "^4.0.8"
jupytext = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
